--- a/.github/workflows/staging-release.yaml
+++ b/.github/workflows/staging-release.yaml
@@ -2,6 +2,7 @@ name: Release for Staging
 
 on:
   pull_request:
+    branches: [main]
     types: [closed]
 
 env:
@@ -35,6 +36,7 @@ jobs:
 
       - uses: actions/checkout@v3
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 1
 
             # reference - https://github.com/docker/setup-buildx-action#install-by-default
