--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/rhiokim/workflow-test-with-monorepo/issues"
   },
-  "homepage": "https://github.com/rhiokim/workflow-test-with-monorepo#readme"
+  "homepage": "https://github.com/rhiokim/workflow-test-with-monorepo#readme",
+  "dependencies": {
+    "glob": "^8.0.3"
+  }
 }
