--- a/.github/workflows/staging-release.yaml
+++ b/.github/workflows/staging-release.yaml
@@ -35,19 +35,19 @@ jobs:
           echo "version=${{ steps.branch.outputs._3 }}" >> $GITHUB_ENV
 
       - name: Switch dev -> development
-        if: ${{ steps.branch.outputs._2 == 'dev'}}
+        if: ${{ steps.branch.outputs._2 }} == 'dev'
         run: |
           echo "dotenv=development" >> $GITHUB_ENV
           cat ./packages/okky-web/README.md
 
 
       - name: Switch staging -> staging
-        if: ${{ steps.branch.outputs._2 == 'staging' }}
+        if: ${{ steps.branch.outputs._2 }} == 'staging'
         run: |
           echo "dotenv=staging" >> $GITHUB_ENV
 
       - name: Switch prod -> production
-        if: ${{ steps.branch.outputs._2 == 'prod' }}
+        if: ${{ steps.branch.outputs._2 }} == 'prod'
         run: |
           echo "dotenv=production" >> $GITHUB_ENV
 
