--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workflow-test",
-  "version": "0.0.24",
+  "version": "0.0.25-rc.0",
   "description": "",
   "main": "index.js",
   "scripts": {
