--- a/packages/aaa/package.json
+++ b/packages/aaa/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@rhiokim/constants": "^0.0.2",
     "next": "latest",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
