--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.25-rc.2",
   "description": "",
   "main": "index.js",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
